--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -68,7 +68,7 @@
 				<para>In the application launcher menu, &spectacle; can be found at <menuchoice><guisubmenu>Applications</guisubmenu><guisubmenu>Graphics</guisubmenu><guimenuitem>Screenshot Capture Utility &spectacle;</guimenuitem></menuchoice></para>
 			</listitem>
 			<listitem>
-				<para>Pressing the <keycap>Print Screen</keycap> button on the keyboard will immediately launch &spectacle;. Additionally, two more keyboard shortcuts are available. Pressing <keycombo action="simul">&Ctrl;<keycap>Print Screen</keycap></keycombo> will take a screenshot of the active window and save it in your default save directory without showing the GUI, while pressing <keycombo action="simul">&Shift;<keycap>Print Screen</keycap></keycombo> will take a screenshot of your entire desktop and save it in your default save directory without showing the GUI.</para>
+                <para>Pressing the <keycap>Print Screen</keycap> button on the keyboard will immediately launch &spectacle;. Additionally, two more keyboard shortcuts are available. Pressing <keycombo action="simul"><keycap>Meta</keycap><keycap>Print Screen</keycap></keycombo> will take a screenshot of the active window and save it in your default save directory without showing the GUI, while pressing <keycombo action="simul">&Shift;<keycap>Print Screen</keycap></keycombo> will take a screenshot of your entire desktop and save it in your default save directory without showing the GUI.</para>
 
                 <para>You can configure the default save location and filename by starting &spectacle; normally, clicking the downward arrow beside the <guibutton>Save &amp; Exit</guibutton> button, and selecting <guimenuitem>Configure Save Options</guimenuitem> from the menu.</para>
 			</listitem>
