remove package entitiy + fix releaseinfo

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -2,7 +2,6 @@
 <!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.5-Based Variant V1.1//EN" "dtd/kdedbx45.dtd" [
   <!ENTITY spectacle "Spectacle">
   <!ENTITY kappname "&spectacle;">
-  <!ENTITY package "kdegraphics">
   <!ENTITY % addindex "IGNORE">
   <!ENTITY % English "INCLUDE" > <!-- change language only here -->
   <!ENTITY Boudhayan.Gupta "<personname><firstname>Boudhayan</firstname><surname>Gupta</surname></personname>">
@@ -34,7 +33,7 @@
 		<legalnotice>&FDLNotice;</legalnotice>
 
 		<date>2015-10-17</date>
-		<releaseinfo>15.12.0</releaseinfo>
+		<releaseinfo>Applications 15.12</releaseinfo>
 
 		<abstract>
 			<para>&spectacle; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, the window currently under the mouse, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
