remove obsolete entity kappname + fix entitx spectacle

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -1,7 +1,6 @@
 <?xml version="1.0" ?>
 <!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.5-Based Variant V1.1//EN" "dtd/kdedbx45.dtd" [
-  <!ENTITY spectacle "Spectacle">
-  <!ENTITY kappname "&spectacle;">
+  <!ENTITY spectacle "<application>Spectacle</application>">
   <!ENTITY % addindex "IGNORE">
   <!ENTITY % English "INCLUDE" > <!-- change language only here -->
   <!ENTITY Boudhayan.Gupta "<personname><firstname>Boudhayan</firstname><surname>Gupta</surname></personname>">
@@ -41,7 +40,7 @@
 
 		<keywordset>
 			<keyword>KDE</keyword>
-			<keyword>&spectacle;</keyword>
+			<keyword>spectacle</keyword>
 			<keyword>kdegraphics</keyword>
 			<keyword>screenshot</keyword>
 			<keyword>screen capture</keyword>
